Bug 1335356 - Part 1: Insert caption and thead in the right order. r=smaug